@@ -1,5 +1,9 @@
 2007-06-20  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Change: src/kahua/user.scm, test/user.scm
+	  Change index "login-name" to unique index slot, and drop definition
+	  of "key-of" method on <kahua-user>.
+
 	* Change: src/kahua-user.scm
 	  Add -p(preserve) option to del sub-command.  It only deactivate user
 	  instead of deletion.
